CHORE: Set height to avoid overflow

--- a/src/components/utilitiesAside/utilitiesAside.css
+++ b/src/components/utilitiesAside/utilitiesAside.css
@@ -9,6 +9,7 @@
   margin: 80px 0px;
   gap: 30px;
   overflow: hidden;
+  height: 80%;
   /* padding: 0px 1em; */
 }
 
